# pyNegative

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  debug_exif.py  project_tree.txt  pyproject.toml  test_exif.py
.github/docker/: ci-test.Dockerfile
.github/hooks/: code_format.json
.github/workflows/: ci.yaml  ci.yml  lint.yml  release.yml  tests.yml
.opencode/plans/: fix_histogram_bug.md  highlight_recovery_fix.md  lens_correction.md
scripts/: README.md  benchmark_bilateral.py  benchmark_full_pipeline.py  benchmark_multichannel.py  benchmark_numba.py  benchmark_pipeline.py  compare_denoise_performance.py  download_lens_database.py  generate_icons.py  install-pynegative.bat  install-pynegative.sh  run_all_benchmarks.py
src/pynegative/: __init__.py  core.py  styles.qss  ui.py
src/pyrawroom/: cli.py  core.py  styles.qss  ui.py
tests/: test_core.py  test_version.py
tests/cli/: test_download_lens_database.py
tests/core/: test_autocrop.py  test_defringe.py  test_dehaze.py  test_geometry_fused.py  test_geometry_resolver.py  test_image_io_and_processing.py  test_lens_cache.py  test_lens_db.py  test_lens_resolver_manual.py  test_linear_pipeline.py  test_numba_warmup.py  test_sidecar_management.py  test_snapshots.py  test_tca_correction.py  test_thumbnail_cache.py  test_tone_mapping.py  test_vignette.py
tests/io/: test_bmff_metadata.py  test_lens_db_xml_coverage.py  test_lens_metadata.py  test_metadata.py  test_raw_coverage.py
tests/performance/: benchmark_denoise.py
tests/processing/: test_effects.py  test_lens.py  test_tonemap.py
(+138 files in other folders)
