[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynegative"
dynamic = ["version"]
 authors = [
   { name="Lucas Hutchinson" },
 ]
description = "A powerful RAW image processor and editor featuring advanced denoising, dehazing, and batch processing capabilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "Pillow>=11.0.0",
    "pillow-heif>=0.20.0",
    "rawpy>=0.23.0",
    "PySide6>=6.8.0",
    "opencv-python>=4.11.0",
    "opencv-contrib-python>=4.11.0",
    "platformdirs>=4.3.0",
    "numba>=0.61.0",
    "llvmlite>=0.44.0",
    "exifread>=3.5.1",
]

[dependency-groups]
lint = [
    "ruff",
]

test = [
    "pytest",
    "pytest-qt",
]

[project.scripts]
pynegative-debug = "pynegative.ui:main"

[project.gui-scripts]
pynegative = "pynegative.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
